*3.0.0.beta2

* moving code for initializing plugin in sinatra to separate gem

*3.0.0.beta1

* moving deprecated rails controller methods (navigation, current_navigation) to separate file 'rails_controller_methods'. Deprecations removed. File can be required explicitly if controller methods should be still available.
* decoupling from Rails. Introducing the concept of adapters to work with several frameworks. 
* tested with Rails 3.0.0
* adding support for Sinatra and Padrino frameworks.
* cherry picking active_support stuff instead of requiring the whole bunch (tested with active_support >= 2.3.2 and 3.0.0)
* created public sample project which includes demo for Rails2, Rails3, Sinatra and Padrino (will be available on github soon)
* better src file organization (adapters/core/rendering folders)

*2.7.3

* initializing SimpleNavigation.config_file_path with empty array (was nil before). Allows for adding paths before gem has been initialized.

*2.7.2

* added ability to have more than one config_file_path (useful if simple-navigation is used as a part of another gem/plugin). Credits to Luke Imhoff.

*2.7.1

* added SimpleNavigation.request and SimpleNavigation.request_uri as abstraction for getting request_uri (rails2/rails3)
* use request.fullpath instead of request.request_uri for Rails3. Credits to Ben Langfeld.

*2.7.0

* added new option :highlights_on to item definition in config-file. Specify a regexp which is matched against the current_uri to determine if an item is active or not. Replaces explicit highlighting in controllers.
* deprecated explicit highlighting in the controllers.

*2.6.0

* added rendering option 'skip_if_empty' to Renderer::List to avoid rendering of empty ul-tags
* added breadcrumbs renderer incl. specs. A big thanks to Markus Schirp.
* added ability to register a renderer / specify your renderer as symbol in render_navigation
* renderer can be specified in render_navigation. Credits to Andi Bade from Galaxy Cats.

*2.5.4
