@@ -29,19 +29,38 @@ describe SimpleNavigation::Renderer::List do
       it "should render an a-tag inside each li-tag" do
         HTML::Selector.new('li a').select(render).should have(3).entries
       end
-      it "should pass the specified html_options to the li element" do
-        HTML::Selector.new('li[style=float:right]').select(render).should have(1).entries
-      end
-      it "should give the li the id specified in the html_options" do
-        HTML::Selector.new('li#my_id').select(render).should have(1).entries
-      end
-      it "should give the li the default id (stringified key) if no id is specified in the html_options" do
-        HTML::Selector.new('ul li#invoices').select(render).should have(1).entries
-      end
-      it "should not apply the the default id where there is an id specified in the html_options" do
-        HTML::Selector.new('ul li#users').select(render).should be_empty
-      end
 
+      context 'concerning html attributes' do
+        context 'default case (no options defined for link tag)' do
+          it "should pass the specified html_options to the li element" do
+            HTML::Selector.new('li[style=float:right]').select(render).should have(1).entries
+          end
+          it "should give the li the id specified in the html_options" do
+            HTML::Selector.new('li#my_id').select(render).should have(1).entries
+          end
+          it "should give the li the default id (stringified key) if no id is specified in the html_options" do
+            HTML::Selector.new('ul li#invoices').select(render).should have(1).entries
+          end
+          it "should not apply the the default id where there is an id specified in the html_options" do
+            HTML::Selector.new('ul li#users').select(render).should be_empty
+          end
+        end
+        context 'with attributes defined for the link tag as well' do
+          it "should add the link attributes to the link" do
+            HTML::Selector.new('a[style=float:left]').select(render).should have(1).entries
+          end
+          it "should add the li attributes to the li element" do
+            HTML::Selector.new('li[style=float:right]').select(render).should have(1).entries
+          end
+          it "should give the li the default id (stringified key) if no id is specified in the html_options for the li-element" do
+            HTML::Selector.new('ul li#invoices').select(render).should have(1).entries
+          end
+          it "should not apply the the default id where there is an id specified in the html_options for th li-element" do
+            HTML::Selector.new('ul li#users').select(render).should be_empty
+          end
+        end
+      end
+      
       context 'with current_navigation set' do
         it "should mark the matching li-item as selected (with the css_class specified in configuration)" do
           HTML::Selector.new('li.selected').select(render(:invoices)).should have(1).entries
@@ -49,7 +68,6 @@ describe SimpleNavigation::Renderer::List do
         it "should also mark the links inside the selected li's as selected" do
           HTML::Selector.new('li.selected a.selected').select(render(:invoices)).should have(1).entries
         end
-
       end
 
       context 'without current_navigation set' do
@@ -122,6 +140,48 @@ describe SimpleNavigation::Renderer::List do
             end
           end
         end
+      end
+    end
+    
+    describe 'link_options_for' do
+      before(:each) do
+        setup_renderer_for SimpleNavigation::Renderer::List, :rails, options
+      end
+      context 'no link options specified' do
+        context 'method specified' do
+          context 'item selected' do
+            before(:each) do
+              @item = stub(:item, :method => :delete, :selected_class => 'selected', :html_options => {})
+            end
+            it {@renderer.send(:link_options_for, @item).should == {:method => :delete, :class => 'selected'}}
+          end
+          context 'item not selected' do
+            before(:each) do
+              @item = stub(:item, :method => :delete, :selected_class => nil, :html_options => {})
+            end
+            it {@renderer.send(:link_options_for, @item).should == {:method => :delete}}
+          end
+        end
+        context 'method not specified' do
+          context 'item selected' do
+            before(:each) do
+              @item = stub(:item, :method => nil, :selected_class => 'selected', :html_options => {})
+            end
+            it {@renderer.send(:link_options_for, @item).should == {:class => 'selected'}}
+          end
+          context 'item not selected' do
+            before(:each) do
+              @item = stub(:item, :method => nil, :selected_class => nil, :html_options => {})
+            end
+            it {@renderer.send(:link_options_for, @item).should == {}}
+          end        
+        end
+      end
+      context 'link options specified' do
+        before(:each) do
+          @item = stub(:item, :method => :delete, :selected_class => 'selected', :html_options => {:link => {:class => 'link_class', :style => 'float:left'}})
+        end
+        it {@renderer.send(:link_options_for, @item).should == {:method => :delete, :class => 'link_class selected', :style => 'float:left'}}
       end
     end
     
