@@ -1,3 +1,7 @@
+*master
+
+* ability to specify attributes for the generated link-tag in list renderer (up to now the attributes have been applied to the li-tag). Credits to Anthony Navarre for input and discussion.
+
 *3.0.0.beta2
 
 * moving code for initializing plugin in sinatra to separate gem
